removed hyperparameter db

--- a/notebooks/exp_noise_robustness.ipynb
+++ b/notebooks/exp_noise_robustness.ipynb
@@ -90,7 +90,7 @@
     "        }\n",
     "\n",
     "        GNN = train_base_model(\n",
-    "            regime_key='NOISE',\n",
+    "            regime_key='BASE_10_6_TRAIN',\n",
     "            train_config=TRAIN_CONFIGS['NOISE'],\n",
     "            name=f'GNN_noise_{noise_value}',\n",
     "            args=args\n",
